2001-03-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (_ftp_ascii2host): new function
	(ftp_cat): use _ft_ascii2host for ASCII mode transfers.  rewrite
	transfer rate with non-blocking I/O and enable

2000-12-15  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* mkbind.c (main): include <unistd.h>, include prg in args to
	fprintf.

2000-12-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* mkbind.c (main): create output in temp file and rename when
	done.

	* Makefile.am: sort various sections alphabetically.

2000-12-13  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_tag.c (fn_saveurls): use mkhoststr to include user, password
	and port in written URL.
	* ftp.c (ftp_login): use mkhoststr.
	* util.c (mkhoststr): new function.
	* url.c: new file for URL handling: encoding, decoding, parsing.

2000-12-11  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c (get_anon_passwd): move to util.c from main.c.

	* main.c (main): adapt to changes of ftp_connect and ftp_login.
	* ftp.c (ftp_connect, ftp_login, ftp_reconnect): set and use
	connection info variables.  NULL host or user means use old
	values.  only ask user for password if server wants one.
	
	* ftp.c (ftp_host, ftp_prt, ftp_user, ftp_pass, ftp_anon):
	functions to access connection info.

	* ftp.c: prepended _ to connection info variables and made them
	static.
	
	* fn_tag.c (fn_saveurls): make pluralization internationalization
	friendly.

	* Makefile.am, configure.in: remove getdomainname replacement.
	main.c (get_anon_passwd): if the system doesn't provide
	getdomainname, don't use it.

	* Makefile.am, mkfntab-c.m4, mkfntab-h.m4: merge .proto files into
	m4 files.

	* readdir.c (read_dir): display progress.

2000-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_select.c, fn_tag.c, ftp.c, tag.c: remove unnecessary casts of
	basename to char *.

	* tparam.c: include ANSI C headers unconditionally.

	* fn_select.c, fn_tag.c, ftp.c, tag.c: sort headers, include